src/objects/Page__c.object
<CustomObject>
    <fields>
        <fullName>Cache_expires__c</fullName>
        <defaultValue>600</defaultValue>
        <description>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</description>
        <inlineHelpText>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</inlineHelpText>
        <label>Cache expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to set the page as your home page</description>
        <inlineHelpText>Check this box to set the page as your home page</inlineHelpText>
        <label>Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageTemplateVFPage__c</fullName>
        <formula>PageTemplate__r.VisualForce_Page_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PageTemplateVFPage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageTemplate</label>
        <referenceTo>PageTemplate__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Home_Page__c</columns>
        <columns>PageTemplate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Cache_expires__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>